'完成详情页面开发以及登录权限认证'

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.13.2",
+    "github-markdown-css": "^4.0.0",
     "jquery": "^3.5.1",
+    "markdown-it": "^12.0.2",
     "mavon-editor": "^2.9.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
