--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "element-ui": "^2.13.2",
     "github-markdown-css": "^4.0.0",
+    "highlight.js": "^10.3.2",
     "jquery": "^3.5.1",
     "markdown-it": "^12.0.2",
     "mavon-editor": "^2.9.0",
